src/compiletest/tlcell-11.stderr
error[E0277]: `*const ()` cannot be shared between threads safely
 --> $DIR/tlcell-11.rs:8:5
  |
7 |     fn is_sync<T: Sync>() {}
  |                   ---- required by this bound in `is_sync`
8 |     is_sync::<TLCellOwner<Marker>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be shared between threads safely
  |
  = help: within `TLCellOwner<Marker>`, the trait `Sync` is not implemented for `*const ()`
  = note: required because it appears within the type `(*const (), qcell::Invariant<Marker>)`
  = note: required because it appears within the type `PhantomData<(*const (), qcell::Invariant<Marker>)>`
  = note: required because it appears within the type `TLCellOwner<Marker>`
